--- a/Views/Revistas/Create.cshtml
+++ b/Views/Revistas/Create.cshtml
@@ -37,7 +37,7 @@
                     <br />
                     <div id="divButtons" class="tright">
 
-                        <button id="btnSalvar" value="Salvar" type="submit" title="Salvar"class="btn btn-secondary" formaction="@Url.Action("Create","Revistas", new { acao = "Salvar"})">Secondary</button>
+                        <button id="btnSalvar" value="InsertRevista" type="submit" title="Salvar"class="btn btn-secondary" formaction="@Url.Action("InsertRevista","Revistas")">Gravar</button>
                         @*<button  class="main"  formaction="@Url.Action("Create","Revistas", new { acao = "Salvar"})" type="submit" name="Salvar" >Salvar</button>*@
                         @*<button id="btnEnviarAnp" class="main" title="Enviar para a ANP" formaction="@Url.Action("CadastroForm","NPPV279", new { acao = "Enviar"})" type="submit" name="Enviar" value="Enviar">Salvar e Enviar</button>*@
                     </div>
