--- a/Views/Revistas/Create.cshtml
+++ b/Views/Revistas/Create.cshtml
@@ -33,6 +33,7 @@
                     <div class="form-group">
                         @Html.LabelFor(model => model.Foto, new { @class="control-label"})
                         @Html.TextBoxFor(model => model.Foto, new { @class="form-control"})
+                        @Html.ValidationMessageFor(x => x.Foto, "", new { @id = "Error", @class = "text-danger" })
                     </div>
                     <br />
                     <div id="divButtons" class="tright">
