--- a/Views/Revistas/Create.cshtml
+++ b/Views/Revistas/Create.cshtml
@@ -1,5 +1,14 @@
 ﻿@model Arthes2022.Models.ViewModels.RevistaViewModel
+@using Arthes2022.Models.Extensions
+@using Arthes2022.Models.Entities
 
+
+<style>
+    .text-danger-cadastro {
+        color: red;
+        font-size: smaller;
+    }
+</style>
 <html>
 <body>
     <h1>Cadastro de Revistas</h1>
@@ -8,37 +17,41 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <form asp-action="Create">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <form method="post" action="InsertRevista">
+                    <div asp-validation-summary="ModelOnly" class="text-danger-cadastro"></div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Tema, new { @class="control-label"})
                         @Html.TextBoxFor(model => model.Tema, new { @class="form-control"})
-                        @Html.ValidationMessageFor(x => x.Tema, "", new { @id = "Error", @class = "text-danger" })
+                        @Html.ValidationMessageFor(x => x.Tema, "", new { @id = "Error", @class = "text-danger-cadastro" })
                     </div>
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-6">
                         @Html.LabelFor(model => model.NumeroEdicao, new { @class="control-label"})
                         @Html.TextBoxFor(model => model.NumeroEdicao, new { @class="form-control"})
-                        @Html.ValidationMessageFor(x => x.NumeroEdicao, "", new { @id = "Error", @class = "text-danger" })
+                        @Html.ValidationMessageFor(x => x.NumeroEdicao, "", new { @id = "Error", @class = "text-danger-cadastro" })
                     </div>
-                    <div class="form-group  col-md-4">
+                    <div class="form-group  col-md-6">
                         @Html.LabelFor(model => model.MesEdicao, new { @class="control-label"})
-                        @Html.TextBoxFor(model => model.MesEdicao, new { @class="form-control"})
-                        @Html.ValidationMessageFor(x => x.MesEdicao, "", new { @id = "Error", @class = "text-danger" })
+                        @*@Html.TextBoxFor(model => model.MesEdicao, new { @class="form-control"})*@
+                        @Html.DropDownListFor(Model => Model.MesEdicao, Mes.JANEIRO.ToSelectList(),"", new { @class="form-control"})  
+                        @Html.ValidationMessageFor(x => x.MesEdicao, "", new { @id = "Error", @class = "text-danger-cadastro" })
                     </div>
-                    <div class="form-group col-md-4">
+                    <div class="form-group col-md-6">
                         @Html.LabelFor(model => model.AnoEdicao, new { @class="control-label"})
                         @Html.TextBoxFor(model => model.AnoEdicao, new { @class="form-control"})
-                        @Html.ValidationMessageFor(x => x.AnoEdicao, "", new { @id = "Error", @class = "text-danger" })
+                        @Html.ValidationMessageFor(x => x.AnoEdicao, "", new { @id = "Error", @class = "text-danger-cadastro" })
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Foto, new { @class="control-label"})
                         @Html.TextBoxFor(model => model.Foto, new { @class="form-control"})
-                        @Html.ValidationMessageFor(x => x.Foto, "", new { @id = "Error", @class = "text-danger" })
+                        @Html.ValidationMessageFor(x => x.Foto, "", new { @id = "Error", @class = "text-danger-cadastro" })
                     </div>
                     <br />
                     <div id="divButtons" class="tright">
-
-                        <button id="btnSalvar" value="InsertRevista" type="submit" title="Salvar"class="btn btn-secondary" formaction="@Url.Action("InsertRevista","Revistas")">Gravar</button>
+                        <div class="form-group">
+                            <button type="submit" value="Create" class="btn btn-primary">Salvar</button>
+                            @*<button  class="" formaction="@Url.Action("InsertRevista","Revistas")" type="submit" name="Salvar" >Salvar</button>*@
+                        </div>
+                        @*<button id="btnSalvar"  title="Salvar" class="btn btn-secondary" formaction="@Url.Action("InsertRevista","Revistas")">Gravar</button>*@
                         @*<button  class="main"  formaction="@Url.Action("Create","Revistas", new { acao = "Salvar"})" type="submit" name="Salvar" >Salvar</button>*@
                         @*<button id="btnEnviarAnp" class="main" title="Enviar para a ANP" formaction="@Url.Action("CadastroForm","NPPV279", new { acao = "Enviar"})" type="submit" name="Enviar" value="Enviar">Salvar e Enviar</button>*@
                     </div>
