--- a/Views/Revistas/Create.cshtml
+++ b/Views/Revistas/Create.cshtml
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <form method="post" action="InsertRevista">
+                <form method="post" action="CreateRevista">
                     <div asp-validation-summary="ModelOnly" class="text-danger-cadastro"></div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Tema, new { @class="control-label"})
@@ -32,7 +32,7 @@
                     <div class="form-group  col-md-6">
                         @Html.LabelFor(model => model.MesEdicao, new { @class="control-label"})
                         @*@Html.TextBoxFor(model => model.MesEdicao, new { @class="form-control"})*@
-                        @Html.DropDownListFor(Model => Model.MesEdicao, Mes.JANEIRO.ToSelectList(),"", new { @class="form-control"})  
+                        @Html.DropDownListFor(Model => Model.MesEdicao, Mes.JANEIRO.ToSelectList(),"", new { @class="form-control"})
                         @Html.ValidationMessageFor(x => x.MesEdicao, "", new { @id = "Error", @class = "text-danger-cadastro" })
                     </div>
                     <div class="form-group col-md-6">
@@ -49,11 +49,8 @@
                     <div id="divButtons" class="tright">
                         <div class="form-group">
                             <button type="submit" value="Create" class="btn btn-primary">Salvar</button>
-                            @*<button  class="" formaction="@Url.Action("InsertRevista","Revistas")" type="submit" name="Salvar" >Salvar</button>*@
                         </div>
-                        @*<button id="btnSalvar"  title="Salvar" class="btn btn-secondary" formaction="@Url.Action("InsertRevista","Revistas")">Gravar</button>*@
-                        @*<button  class="main"  formaction="@Url.Action("Create","Revistas", new { acao = "Salvar"})" type="submit" name="Salvar" >Salvar</button>*@
-                        @*<button id="btnEnviarAnp" class="main" title="Enviar para a ANP" formaction="@Url.Action("CadastroForm","NPPV279", new { acao = "Enviar"})" type="submit" name="Enviar" value="Enviar">Salvar e Enviar</button>*@
+
                     </div>
                 </form>
             </div>
@@ -67,4 +64,4 @@
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
-    }
+}
